# resumd

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  main.py  pyproject.toml  resume.md  test_resume.md
enums/: line_width.py  margin_size.py  spacing_size.py  special_char.py
models/: config_parser.py  font_fetcher.py  layout_calculator.py  resume_pdf.py  resume_pdf_factory.py  resume_renderer.py
resumd_pkg/: main.py
resumd_pkg/enums/: bullet_indent_size.py  line_width.py  spacing_size.py
resumd_pkg/models/: config_parser.py  font_fetcher.py  layout_calculator.py  resume_pdf.py  resume_pdf_factory.py  resume_renderer.py
templates/: default.md  default.yaml  harvard.md  harvard.yaml  mit.md  r_engineering_resumes.md  will.yaml
