[project]
name = "resumd"
version = "0.1.0"
description = "Generate professional resume PDFs with Markdown"
readme = "README.md"
keywords = ["resume", "pdf", "markdown"]
urls = { "Homepage" = "https://github.com/willdufault/resumd" }
requires-python = ">=3.13"
dependencies = [
    "fpdf2>=2.8.7",
    "platformdirs>=4.9.4",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "rich>=14.3.3",
    "uharfbuzz>=0.53.3",
]

[project.scripts]
resumd = "resumd_pkg.main:main"

[tool.setuptools.package-data]
"resumd_pkg" = ["templates/*"]
